# scanbuttond

./: .gitignore  AUTHORS  BUGS  ChangeLog  Doxyfile  Makefile  Makefile.am  README  architecture.fig  buttonpressed.sh  config.h.in  configure  configure.in  epson.c  epson.h  initscanner.sh  libusbi.c  libusbi.h  meta.conf  scanbuttond.c  scanbuttond.h
backends/: Makefile.am  backend.h  epson.c  epson.h  generic_backend.h  genesys.c  hp3900.c  libepson.so.1.0  meta.c  meta.conf  meta.h  mustek.c  mustek.h  niash.c  niash.h  plustek.c  plustek.h  plustek_umax.c  plustek_umax.h  snapscan.c  snapscan.h
include/scanbuttond/: backend.h  backend_common.h  backend_loader.h  frontend.h  interface_usb.h  libusbi.h  protocol.h  scanbuttond.h
interface/: Makefile.am  interface_usb.c  libusbi.c  libusbi.h
lib/: backend_loader.c  common.c  common.h  frontend.c  frontend.h  loader.c  loader.h
scripts/: Makefile.am
server/: server.c
