AC_PREREQ(2.59)

AC_INIT([scanbuttond], [0.3], [root84@users.soureforge.net])
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE

AC_DISABLE_STATIC

AC_LANG_C
AC_PROG_CC
AC_PROG_LIBTOOL

AC_CHECK_HEADERS(errno.h string.h syslog.h unistd.h dlfcn.h usb.h)

AC_OUTPUT(Makefile interface/Makefile backends/Makefile)
